@@ -33,6 +33,7 @@ http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
  + Add Generation 3 access control tables and framework
 
 25-Jan-2009 Rob Schley
+ ^ Updated SqueezeBox to 1.1 rc2 for MooTools 1.2.
  + Added JText._() and JText.load() to MooTools 1.2 JavaScript to make JavaScript I18N easier.
  + Added JText::script for JavaScript I18N.
  + Added support for JavaScript I18N in JDocumentHTML.
